--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "nodemailer": "^6.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/www"
-  },
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
+ },
   "name": "letsendorseproject",
   "version": "1.0.0",
   "description": "user authentication and management backendapp",
