--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
@@ -14,14 +15,12 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
- },
+  },
   "name": "letsendorseproject",
   "version": "1.0.0",
   "description": "user authentication and management backendapp",
   "main": "server.js",
-
   "start": "node server.js",
-  "devDependencies": {},
   "author": "anooja",
   "license": "ISC"
 }
